--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-table-component": "^1.2.2",
     "react-native-tags-input": "^1.0.10",
-    "react-native-vector-icons": "7.1.0"
+    "react-native-vector-icons": "7.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
