--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral() 
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
@@ -36,6 +37,7 @@ allprojects {
 
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://www.jitpack.io' }
         maven { url 'https://maven.google.com' }
     }
