--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.7",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^10.4.0",
     "@react-navigation/bottom-tabs": "5.11.1",
     "@react-navigation/drawer": "5.11.3",
     "@react-navigation/material-bottom-tabs": "5.3.9",
