--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,6 @@ platform :ios, '12.0'
 
 target 'casino' do
   config = use_native_modules!
-#  use_frameworks!
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -22,7 +21,7 @@ target 'casino' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  # use_flipper!()
+  use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
