--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "10.4.0",
     "@react-native-firebase/firestore": "10.4.0",
+    "@react-native-firebase/auth": "10.4.0",
     "@react-navigation/bottom-tabs": "5.11.1",
     "@react-navigation/drawer": "5.11.3",
     "@react-navigation/material-bottom-tabs": "5.3.9",
@@ -29,8 +30,6 @@
     "appcenter": "^4.2.0",
     "axios": "0.21.0",
     "lodash": "^4.17.21",
-    "lottie-ios": "3.2.3",
-    "lottie-react-native": "4.1.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "patch-package": "^6.4.7",
