--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@react-native-community/netinfo": "5.9.7",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "10.4.0",
-    "@react-native-firebase/firestore": "10.4.0",
     "@react-native-firebase/auth": "10.4.0",
+    "@react-native-firebase/firestore": "10.4.0",
     "@react-navigation/bottom-tabs": "5.11.1",
     "@react-navigation/drawer": "5.11.3",
     "@react-navigation/material-bottom-tabs": "5.3.9",
@@ -40,6 +40,7 @@
     "react-native-exit-app": "1.1.0",
     "react-native-fast-image": "8.3.4",
     "react-native-gesture-handler": "1.8.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
