--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,9 @@ platform :ios, '12.0'
 
 target 'casino' do
   config = use_native_modules!
-
+  
+#  pod 'OpenSSL-Universal', '~>1.0.2.20'
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
