--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "10.4.0",
     "@react-native-firebase/auth": "10.4.0",
     "@react-native-firebase/firestore": "10.4.0",
+    "@react-native-firebase/remote-config": "10.4.0",
     "@react-navigation/bottom-tabs": "5.11.1",
     "@react-navigation/drawer": "5.11.3",
     "@react-navigation/material-bottom-tabs": "5.3.9",
