--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-table-component": "^1.2.2",
     "react-native-tags-input": "^1.0.10",
     "react-native-vector-icons": "7.1.0",
+    "react-native-view-shot": "^3.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
