config build android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,11 @@ buildscript {
 }
 
 allprojects {
+    configurations.all {
+        resolutionStrategy {
+            force "com.facebook.react:react-native:0.64.2" 
+        }
+    }
     repositories {
         mavenLocal()
         maven {
