--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -192,6 +193,10 @@ android {
             }
 
         }
+    }
+
+    lintOptions { 
+        checkReleaseBuilds false
     }
 }
 
