--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-tags-input": "^1.0.10",
     "react-native-vector-icons": "7.1.0",
     "react-native-view-shot": "^3.5.0",
+    "react-native-walkthrough-tooltip": "^1.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
